--- a/requirements.txt
+++ b/requirements.txt
@@ -1,229 +1,13 @@
-aioboto3==11.3.0
-aiobotocore==2.6.0
-aiohttp==3.8.5
-aioitertools==0.11.0
-aiosignal==1.3.1
-altair==5.1.1
-annotated-types==0.6.0
-anthropic==0.19.1
-anyio==4.2.0
-appdirs==1.4.4
-appnope==0.1.3
-asttokens==2.4.1
-async-timeout==4.0.3
-attrs==22.2.0
-beautifulsoup4==4.12.2
-blinker==1.6.2
-boto3==1.28.17
-botocore==1.31.17
-CacheControl==0.12.11
-cachetools==5.3.0
-certifi==2022.12.7
-cffi==1.15.1
-chardet==4.0.0
-charset-normalizer==3.1.0
-ci-info==0.3.0
-click==8.1.3
-colorama==0.4.6
-comm==0.2.1
-configobj==5.0.8
-configparser==5.3.0
-crewai==0.1.32
-cryptography==40.0.1
-cssselect==1.2.0
-dataclasses-json==0.5.7
-debugpy==1.8.0
-decorator==5.1.1
-deeplake==3.6.24
-dill==0.3.7
-distlib==0.3.6
-distro==1.9.0
-dnspython==2.3.0
-docker==6.0.1
-duckduckgo-search==2.8.5
-entrypoints==0.4
-etelemetry==0.3.0
-executing==2.0.1
-feedfinder2==0.0.4
-feedparser==6.0.10
-filelock==3.10.7
-firebase-admin==6.1.0
-fitz==0.0.1.dev2
-Flask==2.2.3
-Flask-Cors==3.0.10
-frozendict==2.4.0
-frozenlist==1.3.3
-fsspec==2024.2.0
-future==0.18.3
-gitdb==4.0.10
-GitPython==3.1.36
-google-api-core==2.11.0
-google-api-python-client==2.83.0
-google-auth==2.17.0
-google-auth-httplib2==0.1.0
-google-cloud==0.34.0
-google-cloud-core==2.3.2
-google-cloud-firestore==2.10.1
-google-cloud-storage==2.7.0
-google-crc32c==1.5.0
-google-resumable-media==2.4.1
-googleapis-common-protos==1.59.0
-grpcio==1.53.0
-grpcio-status==1.53.0
-gTTS==2.3.1
-h11==0.14.0
-html5lib==1.1
-httpcore==1.0.2
-httplib2==0.22.0
-httpx==0.26.0
-huggingface-hub==0.21.4
-humbug==0.3.2
-idna==3.4
-importlib-metadata==6.8.0
-install==1.3.5
-ipykernel==6.29.0
-ipython==8.20.0
-isodate==0.6.1
-itsdangerous==2.1.2
-jedi==0.19.1
-jieba3k==0.35.1
-Jinja2==3.1.2
-jmespath==1.0.1
-joblib==1.2.0
-jsonpatch==1.33
-jsonpointer==2.4
-jsonschema==4.19.0
-jsonschema-specifications==2023.7.1
-jupyter_client==8.6.0
-jupyter_core==5.7.1
-langchain==0.1.1
-langchain-community==0.0.13
-langchain-core==0.1.11
-langchain-openai==0.0.2.post1
-langchainplus-sdk==0.0.20
-langsmith==0.0.80
-loguru==0.6.0
-looseversion==1.1.2
-lxml==4.9.2
-markdown-it-py==3.0.0
-MarkupSafe==2.1.2
-marshmallow==3.19.0
-marshmallow-enum==1.5.1
-matplotlib-inline==0.1.6
-mdurl==0.1.2
-msgpack==1.0.5
-multidict==6.0.4
-multiprocess==0.70.15
-multitasking==0.0.11
-mypy-extensions==1.0.0
-nest-asyncio==1.5.7
-networkx==3.0
-newspaper3k==0.2.8
-nibabel==5.0.1
-nipype==1.8.5
-nltk==3.8.1
-numcodecs==0.11.0
-numexpr==2.8.5
-numpy==1.26.4
-openai==1.7.2
-openapi-schema-pydantic==1.2.4
-packaging==23.2
-pandas==1.5.3
-parso==0.8.3
-pathlib==1.0.1
-pathos==0.3.1
-pdfminer==20191125
-pdfminer.six==20221105
-pdfplumber==0.10.3
-peewee==3.17.1
-pexpect==4.9.0
-Pillow==9.5.0
-pinecone-client==2.2.1
-platformdirs==3.2.0
-playsound==1.2.2
-pox==0.3.3
-ppft==1.7.6.7
-prompt-toolkit==3.0.43
-proto-plus==1.22.2
-protobuf==4.22.1
-prov==2.0.0
-psutil==5.9.7
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyarrow==13.0.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-PyAudio==0.2.13
-pycparser==2.21
-pycryptodome==3.17
-pydantic==2.5.3
-pydantic_core==2.14.6
-pydeck==0.8.0
-pydot==1.4.2
-pydub==0.25.1
-Pygments==2.16.1
-PyJWT==2.6.0
-Pympler==1.0.1
-PyMuPDF==1.23.7
-PyMuPDFb==1.23.7
-pyparsing==3.0.9
-pypdf==3.15.5
-PyPDF2==3.0.1
-pypdfium2==4.24.0
-python-dateutil==2.8.2
-python-dotenv==1.0.0
-python-magic==0.4.27
-pytz==2023.3
-pytz-deprecation-shim==0.1.0.post0
-pyxnat==1.5
-PyYAML==6.0
-pyzmq==25.1.2
-rdflib==6.3.2
-readability-lxml==0.8.1
-referencing==0.30.2
-regex==2023.3.23
+Flask==2.3.2
+gunicorn==20.1.0
+pandas==2.0.1
+numpy==1.24.3
+scikit-learn==1.2.2
+tensorflow==2.12.0
+yfinance==0.2.18
+anthropic==0.2.6
+sqlite3==3.41.2
+jinja2==3.1.2
+werkzeug==2.3.4
 requests==2.31.0
-requests-file==1.5.1
-rich==13.5.2
-rpds-py==0.10.2
-rsa==4.9
-s3transfer==0.6.2
-scipy==1.10.1
-sgmllib3k==1.0.0
-simplejson==3.18.4
-six==1.16.0
-smmap==5.0.0
-sniffio==1.3.0
-soupsieve==2.4
-SQLAlchemy==1.4.47
-stack-data==0.6.3
-streamlit==1.26.0
-streamlit-chat==0.1.1
-tenacity==8.2.2
-tiktoken==0.5.2
-tinysegmenter==0.3
-tldextract==3.5.0
-tokenizers==0.15.2
-toml==0.10.2
-toolz==0.12.0
-tornado==6.3.3
-tqdm==4.65.0
-traitlets==5.14.1
-traits==6.3.2
-typing-inspect==0.8.0
-typing_extensions==4.9.0
-tzdata==2023.3
-tzlocal==4.3.1
-uritemplate==4.1.1
-urllib3==1.26.15
-validators==0.22.0
-virtualenv==20.21.0
-wcwidth==0.2.13
-webencodings==0.5.1
-websocket-client==1.5.1
-websockets==10.3
-Werkzeug==2.2.3
-wrapt==1.15.0
-yarl==1.8.2
-yfinance==0.2.37
-zipp==3.16.2
+matplotlib==3.7.1
